Padding fix for search box
The search box letter were getting cut off. Reduced the padding.  There
may be a better fix related to line height.

--- a/minneapolis311calls/public/stylesheets/global.css
+++ b/minneapolis311calls/public/stylesheets/global.css
@@ -579,7 +579,7 @@ footer ul {
   height: 35px;
   line-height: 35px;
   outline: medium none;
-  padding: 8px 12px;
+  padding: 4px 12px;
   color:black;
   width: 100%;
 /*  font-family: "Arial";
